2010-01-14 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: Session name added to XML file
	* arpwidget.*: missing reading-skips of unknown xml elements added

2010-01-13 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, arpwidget.*, lfowidget.*, seqwidget.*: Session file
	format changed to XML, file extension changed to .qmax, old text
	files can be imported by selecting .qma files in fileOpen dialog 
	filter.
	
2010-01-10 Frank Kober <goemusic@yahoo.fr>
	* arpdata.cpp, midicctable.cpp: mute MIDI controller behaviour
	extended: if min=max (default), a control value=127 toggles state.
	if min!=max, control value=min mutes, control value=max unmutes
	
2010-01-09 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, arp/lfo/seqwidget.*, midicctable.cpp: MIDI Channel 
	added to controller filter
	
2010-01-08 Guido Scholz <guido.scholz@bayernline.de>
	* mainwindow.*: Handler for SIGINT added to handle unsaved or
	changed files more carefully at program termination. Handler for
	SIGUSR1 added to provide support for LADISH level 1.

2010-01-08 Frank Kober <goemusic@yahoo.fr>
	* arp/lfo/seqwidget.cpp: modified flags upon midi controller
	attribution change added, check for double-attributed controllers
	added
	* arpdata.cpp, midicctable.cpp: min/max settings adapted for toggler
	controls
	* midicctable.cpp: revert and remove row functions added
	
2010-01-07 Frank Kober <goemusic@yahoo.fr>
	* seqwidget.cpp: note length slider maximum set to 127
	* midicctable.*: items made editable, "OK" button replaces current
	controllers by table content, "Cancel" quits without applying changes
	* arpdata.cpp: min and max controller settings made active

2010-01-04 Frank Kober <goemusic@yahoo.fr>
	* lfo*.*: custom wave made controllable by offset slider (and MIDI)

2009-12-31 Frank Kober <goemusic@yahoo.fr>
	* MIDI control handling modified: controllers can be attributed to
	mute checkbox and various sliders by context menu and MIDI 
	learn/forget. 