@@ -1,5 +1,6 @@
 2010-01-14 Frank Kober <goemusic@yahoo.fr>
-	* mainwindow.cpp: Session name added to XML file
+	* mainwindow.cpp: Session name added to XML file, recent files menu
+	added with code from AMS
 	* arpwidget.*: missing reading-skips of unknown xml elements added
 
 2010-01-13 Frank Kober <goemusic@yahoo.fr>
